--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.6.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "i": "^0.3.7",
+    "npm": "^11.2.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-cookie": "^7.2.2",
